[gd_scene load_steps=25 format=3 uid="uid://bmj8fchi7mol0"]

[ext_resource type="Script" uid="uid://dhbfo3spvurg2" path="res://entity/cat/cat.gd" id="1_52fj1"]
[ext_resource type="Texture2D" uid="uid://bmhwq5bei5xjc" path="res://entity/cat/image/cat.png" id="2_w46py"]
[ext_resource type="PackedScene" uid="uid://dmwrckgfsxltn" path="res://entity/cat/ear/ear.tscn" id="3_6fl1u"]
[ext_resource type="Texture2D" uid="uid://7pykj3f0oanu" path="res://entity/cat/image/sleepzzz.png" id="4_2hdoq"]
[ext_resource type="AudioStream" uid="uid://b8d4v61qvk4ex" path="res://entity/cat/sound/meow.wav" id="4_w46py"]
[ext_resource type="Texture2D" uid="uid://cufb2uafm5kvg" path="res://common/pixel.png" id="5_2u0g4"]
[ext_resource type="AudioStream" uid="uid://dj3n4asyfs1hx" path="res://entity/cat/sound/move.wav" id="7_2v165"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_i2ana"]
points = PackedVector2Array(-59.028, 67.5, 57.6391, 67.5, 57.6391, -5, 4.86113, -65, -59.028, 0)

[sub_resource type="Animation" id="Animation_2hdoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Mouth:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1e-05]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Eyelids:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1e-05]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Eyelids:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-8.0]
}

[sub_resource type="Animation" id="Animation_2v165"]
resource_name = "blink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Eyelids:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1e-05, 20.0, 1e-05]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Eyelids:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-8.0, -4.0, -8.0]
}

[sub_resource type="Animation" id="Animation_eyw7o"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_2u0g4"]
resource_name = "meow"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Mouth:scale:y")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1e-05, 10.0, 1e-05]
}

[sub_resource type="Animation" id="Animation_7rjga"]
resource_name = "sleeping"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Eyelids:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1e-05, 20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Eyelids:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-8.0, -4.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hdoq"]
_data = {
&"RESET": SubResource("Animation_2hdoq"),
&"blink": SubResource("Animation_2v165"),
&"idle": SubResource("Animation_eyw7o"),
&"meow": SubResource("Animation_2u0g4"),
&"sleeping": SubResource("Animation_7rjga")
}

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_2u0g4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2v165"]
animation = &"blink"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_eyw7o"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7rjga"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2u0g4"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hdoq"]
animation = &"meow"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_2v165"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eyw7o"]
animation = &"sleeping"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_7rjga"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_eyw7o"]
graph_offset = Vector2(-539.273, 572.535)
nodes/Add2/node = SubResource("AnimationNodeAdd2_2u0g4")
nodes/Add2/position = Vector2(672, 416)
nodes/Blink/node = SubResource("AnimationNodeAnimation_2v165")
nodes/Blink/position = Vector2(-512, 320)
nodes/BlinkShot/node = SubResource("AnimationNodeOneShot_eyw7o")
nodes/BlinkShot/position = Vector2(-224, 32)
nodes/Idle/node = SubResource("AnimationNodeAnimation_2u0g4")
nodes/Idle/position = Vector2(-592, 800)
"nodes/Idle 2/node" = SubResource("AnimationNodeAnimation_7rjga")
"nodes/Idle 2/position" = Vector2(-592, -32)
nodes/Meow/node = SubResource("AnimationNodeAnimation_2hdoq")
nodes/Meow/position = Vector2(-592, 1008)
nodes/MeowShot/node = SubResource("AnimationNodeOneShot_2v165")
nodes/MeowShot/position = Vector2(32, 880)
nodes/Sleeping/node = SubResource("AnimationNodeAnimation_eyw7o")
nodes/Sleeping/position = Vector2(0.476261, 396.099)
nodes/SleepingBlend/node = SubResource("AnimationNodeBlend2_7rjga")
nodes/SleepingBlend/position = Vector2(240, 80)
nodes/output/position = Vector2(1024, 240)
node_connections = [&"Add2", 0, &"SleepingBlend", &"Add2", 1, &"MeowShot", &"BlinkShot", 0, &"Idle 2", &"BlinkShot", 1, &"Blink", &"MeowShot", 0, &"Idle", &"MeowShot", 1, &"Meow", &"SleepingBlend", 0, &"BlinkShot", &"SleepingBlend", 1, &"Sleeping", &"output", 0, &"Add2"]

[node name="Cat" type="RigidBody2D"]
input_pickable = true
mass = 1000.0
angular_damp = 16.637
script = ExtResource("1_52fj1")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(-27, 0)
scale = Vector2(4.92, 4.92)
texture = ExtResource("2_w46py")

[node name="Mouth" type="Sprite2D" parent="Pivot"]
position = Vector2(5, 15)
scale = Vector2(5, 1e-05)
texture = ExtResource("5_2u0g4")

[node name="Eyelids" type="Sprite2D" parent="Pivot"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, -8)
scale = Vector2(54.84, 1e-05)
texture = ExtResource("5_2u0g4")

[node name="SleepParticles" type="CPUParticles2D" parent="Pivot"]
position = Vector2(-6, -25)
emitting = false
amount = 3
texture = ExtResource("4_2hdoq")
lifetime = 3.0
spread = 40.0
gravity = Vector2(0, -30)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
angle_min = -20.0
angle_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 5.0

[node name="LeftEar" parent="." instance=ExtResource("3_6fl1u")]
z_as_relative = false
position = Vector2(-14, -31)

[node name="RightEar" parent="." instance=ExtResource("3_6fl1u")]
z_index = -1
z_as_relative = false
position = Vector2(14, -30)
mass = 2.0
linear_damp = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9.5, 0)
scale = Vector2(0.719997, 0.4)
shape = SubResource("ConvexPolygonShape2D_i2ana")

[node name="MeowPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w46py")

[node name="MovePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2v165")
volume_db = 16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2hdoq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_eyw7o")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/BlinkShot/active = false
parameters/BlinkShot/internal_active = false
parameters/BlinkShot/request = 0
parameters/MeowShot/active = false
parameters/MeowShot/internal_active = false
parameters/MeowShot/request = 0
parameters/SleepingBlend/blend_amount = 0.0

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="finished" from="MeowPlayer" to="." method="_on_meow_player_finished"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
